--- a/lib/mobme/infrastructure/utilities/core_ext/string/msisdn_formats.yml
+++ b/lib/mobme/infrastructure/utilities/core_ext/string/msisdn_formats.yml
@@ -5,17 +5,17 @@
 #   international_prefix: "International Prefix"
 
 IN:
-  regexp: !ruby/regexp '/^(\+|00)?(91)?(9|8|7)[0-9]{9}$/'
+  regexp: !ruby/regexp '/^(\+|00)?(91)?((9|8|7)[0-9]{9})$/'
   country_code: "91"
   local_digits: 10
   international_prefix: "00"
 BH:
-  regexp: !ruby/regexp '/^(\+|00)?(973)?(3|6)[0-9]{7}$/'
+  regexp: !ruby/regexp '/^(\+|00)?(973)?((3|6)[0-9]{7})$/'
   country_code: "973"
   local_digits: 8
   international_prefix: "00"
 CA:
-  regexp: !ruby/regexp '/^(\+|011)?(1)?([2-9][0-9]{2}){2}[0-9]{4}$/'
+  regexp: !ruby/regexp '/^(\+|011)?(1)?(([2-9][0-9]{2}){2}[0-9]{4})$/'
   country_code: "1"
   local_digits: 10
   international_prefix: "011"
