--- a/lib/mobme/infrastructure/utilities/core_ext/string/msisdn_formats.yml
+++ b/lib/mobme/infrastructure/utilities/core_ext/string/msisdn_formats.yml
@@ -4,11 +4,31 @@
 #   local_digits: "Number of digits after country code"
 #   international_prefix: "International Prefix"
 
+TR:
+  regexp: !ruby/regexp '/^(\+|00)?(90)?((2|3|4|5|8|9)[0-9]{10})$/'
+  country_code: "90"
+  local_digits: 10
+  international_prefix: "00"
 IN:
   regexp: !ruby/regexp '/^(\+|00)?(91)?((9|8|7)[0-9]{9})$/'
   country_code: "91"
   local_digits: 10
   international_prefix: "00"
+PK:
+  regexp: !ruby/regexp '/^(\+|00)?(91)?((3)[0-9]{8})$/'
+  country_code: "92"
+  local_digits: 8
+  international_prefix: "00"
+AF:
+  regexp: !ruby/regexp '/^(\+|00)?(93)?((7)[0-9]{8})$/'
+  country_code: "92"
+  local_digits: 9
+  international_prefix: "00"
+LK:
+  regexp: !ruby/regexp '/^(\+|00)?(94)?0?((7)[0-9]{8})$/'
+  country_code: "94"
+  local_digits: 10
+  international_prefix: "00" 
 BH:
   regexp: !ruby/regexp '/^(\+|00)?(973)?((3|6)[0-9]{7})$/'
   country_code: "973"
